added serial number to chunk

--- a/main.ipynb
+++ b/main.ipynb
@@ -261,14 +261,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to process documents in directory: Policy Pulse + AVE collab at time 2025-09-30 21:48:44.842389\n",
+      "Starting to process documents in directory: Policy Pulse + AVE collab at time 2025-09-30 23:20:38.335179\n",
       "Found 29 supported documents to process\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "431995f2e28b4c85965a3fd189c10ceb",
+       "model_id": "b621bd993e514e8bb3c0ca0498461fc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -348,7 +348,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e62827dee6194631a812aa3bab3e9272",
+       "model_id": "4a1efece5003465a9879aeb998dd6bd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -363,9 +363,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample record format: {'id': 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}', 'file_type': '.docx', 'timestamp': '2025-09-30T21:48:49.615275'}\n",
+      "Sample record format: {'id': 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}', 'file_type': '.docx', 'timestamp': '2025-09-30T23:20:39.670926', 'serial_number': 0}\n",
       "Successfully uploaded 107 document chunks to Pinecone index 'policypulse2'\n",
-      "Process completed at 2025-09-30 21:48:51.718168!\n"
+      "Process completed at 2025-09-30 23:20:43.360818!\n"
      ]
     }
    ],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d8d5d87a",
    "metadata": {},
    "outputs": [
@@ -452,8 +452,12 @@
       "Found 107 IDs\n",
       "First 5 IDs: ['Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_1', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_2', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_3', 'Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_4']\n",
       "\n",
+      "=== ID: Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_1 ===\n",
+      "Metadata: {'file_type': '.docx', 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"1\", \"preview\": \"The Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parent...\"}', 'serial_number': 1.0, 'text': \"The Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\\n\\n\\n\\n\\nThe Flexible Working Regulations 2014 (right to request flexible working arrangements for health-related needs).\\n04/03/2025\\nSeveral UK companies have faced significant reputational and financial repercussions due to non-compliance with reproductive health-related workplace laws:\\n2. Failure to Accommodate Reproductive Health Conditions:\\nProperties on the Market: An employee suffering from endometriosis, which left her bedridden, was unfairly dismissed after her employer unilaterally withdrew a previously agreed-upon work-from-home arrangement. The employment tribunal awarded her £31,707.34, emphasizing the necessity for employers to accommodate health conditions like endometriosis. \\nthehrdirector.com\\nUndisclosed Financial Institution: A banker with endometriosis won a reasonable adjustments claim after her employer failed to accommodate her condition, leading to her redundancy during sick leave. The tribunal's decision underscored the importance of providing necessary adjustments for employees with health conditions. \\npersonneltoday.com\\n\\nEU:\\nThe EU Work-Life Balance Directive (minimum rights for parental leave, tll me abu, and carers’ leave).\\nThe Pregnant Workers Directive (92/85/EEC) (maternity leave and workplace protections for pregnant employees).\\nThe Equal Treatment Directive (2006/54/EC) (prohibition of discrimination based on sex, including pregnancy and maternity).\\nNational laws in member states implementing these directives (e.g., Germany’s Mutterschutzgesetz, France’s Code du Travail maternity and parental leave provisions).\", 'timestamp': '2025-09-30T23:20:39.670926'}\n",
+      "Vector length: 1024\n",
+      "\n",
       "=== ID: Module 1 Lesson 3 Compliance legal and ethical considerations_chunk_0 ===\n",
-      "Metadata: {'file_type': '.docx', 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}', 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'timestamp': '2025-09-30T21:48:49.615275'}\n",
+      "Metadata: {'file_type': '.docx', 'metadata': '{\"filename\": \"Module 1 Lesson 3 Compliance legal and ethical considerations.docx\", \"file_type\": \".docx\", \"chunk_id\": \"0\", \"preview\": \"Module 1\\\\nThe case for Reproductive Health at Work\\\\nLesson 3: Compliance, Legal, and Ethical Considera...\"}', 'serial_number': 0.0, 'text': \"Module 1\\nThe case for Reproductive Health at Work\\nLesson 3: Compliance, Legal, and Ethical Considerations (45 minutes)\\nLegal Landscape Overview (15 minutes)\\nDiscuss key regulations in the UK and Europe:\\nUK:\\nThe Equality Act 2010 (protection against pregnancy and maternity discrimination, sex discrimination).\\nPregnancy and Maternity Discrimination:\\nMitie Ltd: In a landmark case, Ms. N Hinds was awarded £350,000 after experiencing pregnancy discrimination. Her employer excluded her from meetings, unjustly criticized her performance, and failed to support her requests for reasonable adjustments during her pregnancy. The tribunal found that Mitie Ltd's actions led to constructive dismissal and discrimination. \\nwirehouse-es.com\\nEvent Medical Group: Lesley Coia won over £6,000 in compensation after her male boss persistently inquired about her pregnancy status, constituting sex-based discrimination. The tribunal rejected the employer's defense and highlighted the inappropriate nature of the questioning. \\nthescottishsun.co.uk\\n\\n\\nThe Employment Rights Act 1996 (statutory rights for maternity leave, paternity leave, shared parental leave)\\n\\nThe Health and Safety at Work Act 1974 (employer responsibilities regarding workplace adjustments for reproductive health conditions).\", 'timestamp': '2025-09-30T23:20:39.670926'}\n",
       "Vector length: 1024\n",
       "\n",
       " {'dimension': 1024,\n",
@@ -468,7 +472,7 @@
    "source": [
     "# This cell is to verify the upload by fetching some vectors and printing their metadata\n",
     "import json\n",
-    "\n",
+    "import time\n",
     "# Path to your JSON file\n",
     "file_path = \"documents_metadata_and_chunks.json\" # need to get chunk ids from here first in local repo\n",
     "\n",
@@ -485,7 +489,8 @@
     "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
     "index = pc.Index(\"policypulse2\")\n",
     "\n",
-    "resp = index.fetch(ids=ids[0:1])\n",
+    "time.sleep(10)  # brief pause to ensure index is ready\n",
+    "resp = index.fetch(ids=ids[0:2])\n",
     "\n",
     "# resp is a FetchResponse; access its vectors\n",
     "for vid, record in resp.vectors.items():\n",
